Almost completely finish Conclusions.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -579,6 +579,15 @@ volume = {145},
 pages = {1339-1359}
 }
 
+@article{Kossin2002,
+author = {Kossin, J.P.},
+year = {2002},
+title = {{Daily hurricane variability inferred from GOES infrared imagery}},
+journal = MWR,
+volume = {130},
+pages = {2260-2270}
+}
+
 @article{Koteswaram1967,
 author = {Koteswaram, P.},
 year = {1957},
@@ -660,6 +669,13 @@ volume = {144},
 pages = {1841-1850}
 }
 
+@misc{CPL,
+author = {McGill, M. and D. Hlavka},
+year = {2015},
+title = {{Hurricane and Severe Storm Sentinel (HS3) Global Hawk Cloud Physics Lidar (CPL) [ATB files]. NASA Global Hydrology Resource Center DAAC]}},
+note = {doi:10.5067/HS3/CPL/DATA202.}
+}
+
 @article{MelhauserZhang2014,
 author = {Melhauser, C. and F. Zhang},
 year = {2014},
@@ -694,6 +710,15 @@ title = {{An atmospheric tape recorder: The imprint of tropical tropopause tempe
 journal = JGR,
 volume = {101},
 pages = {3989-4006}
+}
+
+@article{NavarroHakim2016,
+author = {Navarro, E. L. and G. J. Hakim},
+year = {2016},
+title = {{Idealized numerical modeling of the diurnal cycle of tropical cyclones}},
+journal = JAS,
+volume = {73},
+pages = {4189-4201}
 }
 
 @article{OhnoSatoh2015,
