--- a/conclusion.tex
+++ b/conclusion.tex
@@ -27,7 +27,7 @@ Low-Richardson number layers are considerably more common in hurricanes than in 
 The sensitivity to intensity is attributed to the presence of smaller mean upper-tropospheric static stability in hurricanes, with some contribution from larger mean vertical wind shear --- particularly near the tropopause.
 This destabilization within hurricanes maximizes just below the tropopause.
 These results are supported by idealized simulations of a rapidly-intensifying hurricane, in which the maximum decrease in static stability occurred at and just below the tropopause as the storm intensified.
-The larger mean vertical wind shear observed in hurricanes, particularly near the tropopasue, also is observed in these simulations.
+The larger mean vertical wind shear observed in hurricanes, particularly near the tropopause, also is observed in these simulations.
 Large increases in eddy diffusivity near the tropopause during the storm's intensification are consistent with this layer becoming more conducive to turbulence as static stability decreases and vertical wind shear increases.
 
 A static stability budget analysis reveals that turbulence plays a fundamental role in setting the tropopause-layer potential temperature stratification during TC intensification.
@@ -43,7 +43,7 @@ This tropopause rise was related to a complete elimination of the tropopause inv
 
 Early during Patricia's RI period, the TIL weakened over a broad region of the storm's inner core.
 This weakening was tied to large decreases in lower-stratospheric potential temperature and increases in upper-tropospheric potential temperature.
-These potential temperaturetendencies maximized in the layer immediately surrounding the tropopause --- a structure consistent with the effects of turbulent mixing.
+These potential temperature tendencies maximized in the layer immediately surrounding the tropopause --- a structure consistent with the effects of turbulent mixing.
 It was hypothesized that turbulence, together with detrainment from widespread overshooting convection, forced the lower-stratospheric cooling that helped to weaken the TIL.
 This hypothesis is supported by the observations and budget analysis summarized in the previous section.
 
@@ -72,4 +72,26 @@ This suggests that deep convection within TCs affects not only the troposphere a
 
 \section{Future work}
 
-The upper troposphere   
+Much remains to be discovered about the structure and evolution of the TC tropopause layer.
+The new observations collected during HS3 and TCI have just begun to be utilized, and there are a number of applications in which these observations could improve our understanding of TC dynamics.
+
+\subsection{The association between the presence of cloud layers and static stability maxima}
+
+It was seen in Chapter \ref{chapter:hs3} that it is more common for multiple upper-tropospheric static stability maxima to be present within regions of cold cirrus clouds.
+The relative locations of these stable layers and cloud layers, however, remains unknown.
+The Cloud Physics Lidar (CPL) dataset from HS3 provides a unique opportunity to examine the relationship between stability maxima and cloud layers.
+The CPL provides observations of cloud and aerosol optical depth, along with particle characteristics, at 200-m horizontal and 30-m vertical resolution \citep{CPL}.
+This allows for the unambiguous detection of cloud layers --- even subvisible cirrus clouds that are not well-observed by satellite imagers \cite{Braunetal2016}, but can exert a strong influence on radiative heating tendencies \cite{Durranetal2009}.
+Since CPL flew aboard the same aircraft from which the HS3 dropsondes were deployed on 14-15 September 2012, it is possible to compare directly the temperature profiles observed by the dropsondes to the cloud optical depth profiles observed by CPL.
+If stable layers tend to occur near vertical gradients of optical depth, a relationship can be established definitively between the presence of cirrus clouds of stability maxima.
+If such a relationship is established, it might be difficult to determine with certainty whether the cloud layer is present because the stable layer is present, or whether the stable layer is created by the radiative tendencies associated with the cloud.
+Idealized experiments such as those described by \cite{Durranetal2009} and \cite{Dinhetal2010} could provide some insight into how the relationship between cloud layers and the vertical temperature profile evolves.
+
+\subsection{Tropopause-layer static stability and the TC diurnal cycle}
+
+The existence of a diurnal cycle of TC convection has been well established in recent literature (e.g. \citeauthor{Kossin2002} \citeyear{Kossin2002}; \citeauthor{Dunionetal2014} \citeyear{Dunionetal2014}; \citeauthor{BowmanFowler2015} \citeyear{BowmanFowler2015}).
+Since this cycle exhibits a convective maximum overnight and in the early morning, and a convective minimum in the afternoon, radiative heating tendencies are a natural suspect in its evolution.
+The idealized simulations of \cite{NavarroHakim2016} implicate periodic oscillations in upper-level radiative heating in the evolution of the TC diurnal cycle.
+Their results exhibit characteristics of an inertia--gravity wave response with an outward-propagating horizontal phase speed of 9.8 m s\textsuperscript{-1}, which is consistent with the outward motion of the diurnal pulse observed by \cite{Dunionetal2014}. If the diurnal pulse is, indeed, an outward-propagating gravity wave, the upper-tropospheric static stability profile could have implications for the characteristic of its propagation.
+Analysis of high-density dropsonde observations collected through on ongoing diurnal pulse could provide great insight into whether upper-tropospheric static stability modifies its propagation characteristics. 
+%Mention asymmetric nature of the pulse at times...
