FINAL DRAFT SUBMITTED TO COMMITTEE.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -359,6 +359,15 @@ volume = {142},
 pages = {957-970}
 }
 
+@article{Fovelletal2010,
+author = {Fovell, R. G. and K. L. Corbosiero and A. Seifert and K.-N. Liou},
+year = {2010},
+title = {{Impact of cloud-radiative processes on hurricane track}},
+journal = GRL,
+volume = {37},
+number = {L07808}
+}
+
 @article{Fovelletal2016,
 author = {Fovell, R. G. and Y. P. Bu and K. L. Corbosiero and W.-W. Tung and Y. Cao and H.-C. Kuo and L.-H. Hsu and H. Su},
 year = {2016},
@@ -456,6 +465,15 @@ title = {{Hurricane Hilda, 1964. II. Structure and budgets of the hurricane on O
 journal = MWR,
 volume = {96},
 pages = {617-636}
+}
+
+@article{Heymsfield2006,
+author = {Heymsfield, A. J. and A. Bansemer},
+year = {2006},
+title = {Ice microphysics observations in {Hurricane Humberto}: {Comparison} with non-hurricane-generated ice cloud layers},
+journal = JAS,
+volume = {63},
+pages = {288-308}
 }
 
 @article{HighwoodHoskins1998,
