--- a/hs3.tex
+++ b/hs3.tex
@@ -14,14 +14,14 @@
 
 The preceding two chapters documented the static stability evolution within extraordinarily intense TCs from both an observational and numerical modeling perspective.
 The question remains, however, whether these results can be generalized to a large number of TCs at a range of intensities.
-This chapter first documents the presence of large horizontal gradients of static stability observed within category one Hurricane Nadine (2012) during the NASA Hurricane and Severe Storm Sentinel (HS3; \citeauthor{Braunetal2016} \citeyear{Braunetal2016}).
+This chapter first documents the presence of large horizontal gradients of static stability observed within category-one Hurricane Nadine (2012) during the NASA Hurricane and Severe Storm Sentinel (HS3; \citeauthor{Braunetal2016} \citeyear{Braunetal2016}).
 Then the static stability structure of a large number of TCs is analyzed using the same rawinsonde dataset as that employed by \cite{DuranMolinari2016}.
 
 %---------------------------------------------------------------------------------------%
 \section{Data and methods}
 %---------------------------------------------------------------------------------------%
 Hurricane Nadine (2012), a long-lived TC in the North Atlantic, was the focus of five research flights conducted by a NASA Global Hawk aircraft during HS3 \citep{Braunetal2016}.
-The second research flight into the storm deployed 70 dropsondes \cite{Young2016} while Nadine intensified from a tropical storm to a category 1 hurricane \citep{Brown2013} on 14 September 2012.
+The second research flight into the storm deployed 70 dropsondes \citep{Young2016} while Nadine intensified from a tropical storm to a category-one hurricane \citep{Brown2013} on 14 September 2012.
 These dropsondes, deployed from the lower stratosphere, provided full-tropospheric profiles of temperature, humidity, and wind across a broad region of the storm.
 The observations were interpolated to a 100-m vertical grid following \cite{MolinariVollaro2010} and the static stability ($N^2$) was computed following \cite{DuranMolinari2018}.
 A great strength of the HS3 dropsonde dataset is that it provides numerous high-resolution soundings within and around individual TCs during short time periods.
@@ -34,7 +34,7 @@ This dataset includes 11735 rawinsondes that were launched within 1000 km of TCs
 After imposing a requirement that the cold-point tropopause be located at or above 14 km, 9318 soundings remained within 1000 km of TCs.
 These rawinsondes were deployed from stations across the eastern and central United States, as well as Belize, Grand Cayman, Puerto Rico, and Barbados (Fig. \ref{fig:maps}a).
 They observed 164 different Atlantic-basin TCs at a wide range of intensities within the western Atlantic Ocean, Caribbean Sea, and the Gulf of Mexico (Fig. \ref{fig:maps}b).
-Since most of the observations were collected in the mainland United States, the northwest quadrant of TCs was more well-observed than other quadrants (Fig. \ref{fig:scatterplot}), particularly in hurricanes.
+Since most of the observations were collected in the mainland United States, the northwest quadrant of TCs was better-observed than other quadrants (Fig. \ref{fig:scatterplot}), particularly in hurricanes.
 All quadrants, however, contained observations at a wide range of radii for all storm categories, which facilitates the construction of composite averages.
 
 %---------------------------------------------------------------------------------------%
@@ -113,19 +113,19 @@ These results show that the effect of hurricanes on the thermodynamic environmen
 
 The second derivative of temperature with respect to height (Fig. \ref{fig:tline-int}, right) can be thought of as a measure of the "sharpness" of the tropopause.
 Although this quantity is nearly identical in hurricanes and weak TCs throughout most of the tropopause layer, it is larger in hurricanes at and just above the tropopause than in weak TCs.
-This suggests that, on average, the tropopause is sharper (i.e., the vertical temperature gradient changes more rapidly with height) at the tropopause in hurricanes than in weak TCs.
+This shows that, on average, the tropopause is sharper (i.e., the vertical temperature gradient changes more rapidly with height) at the tropopause in hurricanes than in weak TCs.
 
 \subsubsection{Sensitivity of the tropopause-layer thermodynamic structure to the infrared brightness temperature environment}
 The HS3 observations shown in Section \ref{hs3-irbt} suggested that there might be some connection between the upper-tropospheric thermodynamic structure and the cloud environment.
 To assess this potential connection in a larger number of storms, each rawinsonde in the dataset is assigned an infrared brightness temperature based on its location and time of release.
-The brightness temperatures come from the GridSat-B1 Climate Data Record (CDR), which is a calibrated infrared brightness temperature dataset with 8-km resolution \cite{Knappetal2011}.
-Although Gridsat's relatively coarse resolution precludes observation of the coldest cloud tops in TCs associated with individual overshooting updrafts (e.g. \citeauthor{Griffin2017} \citeyear{Griffin2017}), its resolution is sufficient to discriminate between cloud-free areas and mesoscale regions of very cold cloud tops.
+The brightness temperatures come from the GridSat-B1 Climate Data Record (CDR), which is a calibrated infrared brightness temperature dataset with 8-km resolution \citep{Knappetal2011}.
+Although GridSat's relatively coarse resolution precludes observation of the coldest cloud tops in TCs associated with individual overshooting updrafts (e.g. \citeauthor{Griffin2017} \citeyear{Griffin2017}), its resolution is sufficient to discriminate between cloud-free areas and mesoscale regions of very cold cloud tops.
 
 The rawinsondes are stratified into three bins according brightness temperature: colder than -50\textdegree{}C (Fig. \ref{fig:tline-ir}, magenta lines), between -30\textdegree{}C and -50\textdegree{}C (Fig. \ref{fig:tline-ir}, red lines), and warmer than -30\textdegree{}C (Fig. \ref{fig:tline-ir}, blue lines).
 The left panel of Fig. \ref{fig:tline-ir} indicates that the colder the infrared brightness temperature in which the rawinsonde was released, the colder the upper-tropospheric and lower-stratospheric temperature observed by that rawinsonde.
 Above the tropopause, the temperature differences are nearly constant with height, which is reflected in the very similar vertical temperature gradients observed for each of the categories (Fig. \ref{fig:tline-ir}, center panel).
 These results suggest that deep convection within TCs alters the vertical temperature profile not only in the troposphere, but also well into the lower stratosphere.
-The second derivative of temperature with respect to height (Fig. (\ref{fig:tline-ir}, right panel) also indicates that regions with colder infrared brightness temperatures are characterized by a sharper tropopause.
+The second derivative of temperature with respect to height (Fig. \ref{fig:tline-ir}, right panel) also indicates that regions with colder infrared brightness temperatures are characterized by a sharper tropopause.
 This result is consistent with the subjective analysis conducting using HS3 dropsondes in Section \ref{hs3-irbt}.
 
 %---------------------------------------------------------------------------------------%
