--- a/introduction.tex
+++ b/introduction.tex
@@ -102,8 +102,8 @@ An aircraft in Hurricane Beulah (1967) observed a 7\textdegree{}C temperature in
 Likewise in Hurricane Isbell (1964), the temperature increased by about 8\textdegree{}C in a layer shallower than 300 m [see Fig. 5 in \cite{Gentry1967}].
 It is unclear whether these strong inversions were a consequence of the hurricane’s presence or if the inversions were a part of the background environment.
 
-More recent literature (e.g., \cite{Wirth2003}) has noted that strong, shallow temperature inversions immediately above the cold-point tropopause are a common feature in the tropics, now known as the tropopause inversion layer (TIL).
-On the planetary scale, TIL formation and maintenance has been tied to planetary wave dynamics \cite{Griseetal2010} and vertical gradients of radiative heating across the tropopause \citep{Randeletal2007}, but the relative contributions of dynamics and thermodynamics remains uncertain \citep{Ferreiraetal2016}.
+More recent literature (e.g., \citeauthor{Wirth2003} \citeyear{Wirth2003}) has noted that strong, shallow temperature inversions immediately above the cold-point tropopause are a common feature in the tropics, now known as the tropopause inversion layer (TIL).
+On the planetary scale, TIL formation and maintenance has been tied to planetary wave dynamics \citep{Griseetal2010} and vertical gradients of radiative heating across the tropopause \citep{Randeletal2007}, but the relative contributions of dynamics and thermodynamics remains uncertain \citep{Ferreiraetal2016}.
 To our knowledge, no paper has examined how hurricanes affect the TIL, although the simulations of \cite{OhnoSatoh2015} provide some evidence that they can considerably alter the static stability near the tropopause.
 
 \section{The effect of radiative heating near the tropopause}
