--- a/modeling.tex
+++ b/modeling.tex
@@ -1,4 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+/%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %                                                                 %
 %                           CHAPTER 4                             %
 %                                                                 %
@@ -385,10 +385,10 @@ Advection dominated within the eye, where it provided forcing for destabilizatio
 Radiation and vertical turbulence played particularly important roles in developing the strong $N^2$ maximum just above the cold-point tropopause during RI.
 
 To put the $N^2$ variability observed near the tropopause into context, Fig.~\ref{fig:fulltrop} depicts the model change in $N^2$ over the RI period (hours 24-48) from 0 to 21 km altitude, along with the vertical eddy diffusivity and the radiative heating rate.
-The largest changes in $N^2$ occurred in a relatively shallow layer immediately surrounding the tropopause (Fig.~\ref{fig:fulltrop}a).
-This shallow layer also contained the largest diurnally-averaged radiative heating tendencies found anywhere in the domain (Fig.~\ref{fig:fulltrop}c).
+The largest changes in $N^2$ occurred in a relatively shallow layer immediately surrounding the tropopause (Fig.~\ref{fig:fulltrop}, top).
+This shallow layer also contained the largest diurnally-averaged radiative heating tendencies found anywhere in the domain (Fig.~\ref{fig:fulltrop}, bottom).
 %The largest diurnally-averaged radiative heating tendencies found anywhere in the domain also were contained within this relatively shallow layer (Fig.~\ref{fig:fulltrop}c).
-Values of vertical eddy diffusivity larger than any found outside of the boundary layer also resided in the upper troposphere (Fig.~\ref{fig:fulltrop}b).
+Values of vertical eddy diffusivity larger than any found outside of the boundary layer also resided in the upper troposphere (Fig.~\ref{fig:fulltrop}, middle).
 %The upper troposphere also contained a deep layer of vertical eddy diffusivity values larger than those found anywhere outside of the boundary layer.
 The results herein suggest that this turbulence not only develops as a response to the presence of small static stability and large vertical wind shear, as discussed by \cite{Molinarietal2014} and \cite{DuranMolinari2016}, but also can actively increase the static stability in highly localized regions just above and below the mixed layers.
 
@@ -542,7 +542,7 @@ Orange lines represent the cold-point tropopause height averaged over the 0-24-h
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/vmax+pmin_run12+run14.png}}
 \caption{(a) The maximum 2-m wind speed (m s\textsuperscript{-1}) and (b) minimum sea-level pressure (hPa) for the simulations described in (red) Section \ref{modelsetup} and (blue) Section \ref{lvsensitivity}.}
-\label{fig:turb-50m}
+\label{fig:vmax+pmin-2runs-lv}
 \end{figure*}
 
 %FIGURE 17%
@@ -563,7 +563,7 @@ Orange lines represent the cold-point tropopause height averaged over the 0-24-h
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=39pc]{figures/turb-50m.png}}
 \caption{The contribution of vertical turbulence to the $N^2$ variability (10\textsuperscript{-4} s\textsuperscript{-2} (24 h)\textsuperscript{-1}) averaged over (a) 0-24 hours, (b) 24-48 hours, (c) 48-72 hours, and (d) 72-96 hours for the simulation described in Section \ref{lvsensitivity}. Orange lines represent the cold-point tropopause height averaged over the same time periods.}
-\label{fig:vmax+pmin-2runs-lv}
+\label{fig:turb-50m}
 \end{figure*}
 
 %FIGURE 20%
