--- a/abstract.tex
+++ b/abstract.tex
@@ -21,7 +21,7 @@ Idealized simulations were conducted to examine the processes that might have be
 A static stability budget analysis revealed that three processes - differential advection, vertical gradients of radiative heating, and vertical gradients of turbulent mixing - can produce the observed variability.
 These results support the theoretical assumption that turbulent mixing plays a fundamental role in setting the upper-level potential temperature stratification in TCs.
 The existence of turbulence in the upper troposphere of TCs is corroborated by the presence of low-Richardson number layers in a large number of rawinsonde observations.
-These layers were more common in hurricanes than in weaker TCs, as hurricanes were characterized by both smaller static static stability and larger vertical wind shear in the upper troposphere.
+These layers were more common in hurricanes than in weaker TCs, as hurricanes were characterized by both smaller static stability and larger vertical wind shear in the upper troposphere.
 
 HS3 dropsondes deployed within and around TC Nadine (2012) observed two distinct upper-level stability maxima within the storm's cirrus canopy.
 Outside of the cirrus canopy, however, only one stability maximum was present in the upper levels.
