Add Appendix with permission from AMS and make a few minor revisions at beginning of document.

--- a/abstract.tex
+++ b/abstract.tex
@@ -10,7 +10,7 @@
 
 \indent \indent Upper-tropospheric thermodynamic processes can play an important role in tropical cyclone (TC) structure and evolution.
 Despite its importance, until recently few in-situ observations were available in the upper levels of TCs.
-Two recent field campaigns - the NASA Hurricane and Severe Storm Sentinel (HS3) and the Office of Naval Research Tropical Cyclone Intensity (TCI) experiment - provided a wealth of high-altitude observations within TCs.
+Two recent field campaigns -- the National Aeronautics and Space Administration (NASA) Hurricane and Severe Storm Sentinel (HS3) and the Office of Naval Research Tropical Cyclone Intensity (TCI) experiment -- provided a wealth of high-altitude observations within TCs.
 These observations revealed that the upper-level static stability and tropopause structure of TCs can change dramatically with both space and time.
 
 The TCI dropsonde dataset collected during the rapid intensification (RI) of Hurricane Patricia (2015) revealed dramatic changes in tropopause height and temperature within the storm's inner core.
@@ -18,7 +18,7 @@ These changes in tropopause structure were accompanied by a systematic decrease 
 Outside of the eye, however, an initial decrease in static stability just above the tropopause was followed by an increase in static stability during the latter stages of RI.
 
 Idealized simulations were conducted to examine the processes that might have been responsible for the tropopause variability observed in Hurricane Patricia.
-A static stability budget analysis revealed that three processes - differential advection, vertical gradients of radiative heating, and vertical gradients of turbulent mixing - can produce the observed variability.
+A static stability budget analysis revealed that three processes -- differential advection, vertical gradients of radiative heating, and vertical gradients of turbulent mixing -- can produce the observed variability.
 These results support the theoretical assumption that turbulent mixing plays a fundamental role in setting the upper-level potential temperature stratification in TCs.
 The existence of turbulence in the upper troposphere of TCs is corroborated by the presence of low-Richardson number layers in a large number of rawinsonde observations.
 These layers were more common in hurricanes than in weaker TCs, as hurricanes were characterized by both smaller static stability and larger vertical wind shear in the upper troposphere.
