--- a/turb.tex
+++ b/turb.tex
@@ -95,7 +95,7 @@ The frequency of $R_b < 0.25$ decreases outward from a maximum of over 9\% at in
 At inner radii, low-$R_b$ frequency is maximized near the 13.5-km level, whereas at outer radii the maximum is near 11.5 km.
 A downward radial slope is present throughout the composite along with a gradual thinning of the low-$R_b$ layer with increasing radius.
 
-The static stability and vertical wind shear terms of $R_b$ [the  numerator  and  denominator  of  Eq. \ref{eq:rb},  respectively] for all data points between the 11- and 15-km levels are shown in Fig. 3.
+The static stability and vertical wind shear terms of $R_b$ [the  numerator  and  denominator  of  Eq. \ref{eq:rb},  respectively] for all data points between the 11- and 15-km levels are shown in Fig. \ref{fig:dist-all}.
 The distributions of static stability (red lines) and vertical wind shear (blue lines) both are maximized near zero and fall off rapidly with increasing values.
 The lack of a left tail in the distributions is a consequence of the physical nature of the static stability and vertical wind shear terms: in the absence of strong forcing, a static stability less than zero should be rapidly mixed out, so negative static stabilities are rare, and the vertical wind shear term is defined to be greater than zero.
 
