--- a/appendix.tex
+++ b/appendix.tex
@@ -1,13 +1,15 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %                                                                 %
-%                            APPENDICES                           %
+%                           CHAPTER 5                             %
 %                                                                 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
-\appendix    % This command is used only once!
-%\addcontentsline{toc}{chapter}{APPENDICES}             %toc entry  or:
-\addtocontents{toc}{\parindent0pt\vskip12pt APPENDICES} %toc entry, no page #
+\chapter{Permission to use copyrighted material from the American Meteorological Society}
+\label{chapter:appendix}
+\resetfootnote %this command starts footnote numbering with 1 again.
 
-\chapter{This Is An Appendix}
-
-Here is my appendix content.
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/AMSpermission.png}}
+%\caption{As in Fig. \ref{fig:dist-pert}, but at 0000 UTC (solid lidnes) and 1200 UTC (dotted lines).}
+\label{fig:amspermission}
+\end{figure*}
